# hoice

./: .appveyor.yml  .clippy.toml  .gitignore  .travis.yml  Cargo.toml  NOTICE.md  README.md  build.rs
.github/workflows/: ci.yml
rsc/: mc91.hc
rsc/error/: bad_idents.smt2
rsc/inactive/: core_1.smt2  core_2.smt2  core_3.smt2  core_4.smt2  core_5.smt2  datatypes.smt2
rsc/inactive/adt/: list-synasc-unsat.smt2  list-synasc.smt2  record-cex.smt2  simple-adt-horn.smt2  sorted.smt2  sorted_len.smt2  sorted_len_rev.smt2
rsc/sat/: a-init.smt2  a-init_reals.smt2  arg_red.smt2  cfg_red.smt2  issue_46.smt2  issue_52_1.smt2  issue_52_2.smt2  issue_52_3.smt2  issue_52_4.smt2  issue_57.smt2  not_ill_formed.smt2  preproc_restart.smt2  recursive_simplifications.smt2  simple-adt-horn.smt2
rsc/sat/long/: Ackermann00.smt2
rsc/unsat/: intricate.smt2  mc_91.smt2  preproc.smt2  proof_1.smt2  proof_2.smt2  proof_3.smt2  proof_4.smt2  proof_5.smt2  proof_6.smt2  proof_paths.smt2  proof_unroll.smt2  record-cex.smt2
src/: check.rs  common.rs  data.rs  dtyp.rs  errors.rs  fun.rs  hoice.rs  info.rs  main.rs  parse.rs  split.rs  teacher.rs  term.rs  tests.rs  val.rs
src/check/: mod.rs  parse.rs
src/common/: config.rs  consts.rs  data.rs  macros.rs  mod.rs  msg.rs  profiling.rs  smt.rs  wrappers.rs
src/common/data/: args.rs  constraint.rs  info.rs  mod.rs  sample.rs  unsat_core.rs
src/data/: args.rs  constraint.rs  info.rs  mod.rs  sample.rs
src/dtyp/: mod.rs
src/fun/: mod.rs
src/instance/: build.rs  clause.rs  graph.rs  info.rs  instance.rs  mod.rs  parse.rs  pre_instance.rs  preproc.rs  reduction.rs
src/instance/instance/: clause.rs  mod.rs  pre_instance.rs
src/instance/preproc/: arg_red.rs  (+11 more)
src/learning/: ice.rs  mod.rs  smt.rs
src/parse/: mod.rs  ptterms.rs
src/preproc/: arg_red.rs  bias_unroll.rs  cfg_red.rs  fun_preds.rs  mod.rs  one_lhs.rs  one_rhs.rs  strict_neg_clauses.rs  unroll.rs  utils.rs
src/teacher/: assistant.rs  cex_bias.rs  mod.rs
src/term/: args.rs  bindings.rs  eval.rs  factory.rs  fold.rs  leaf_iter.rs  mod.rs  op.rs  simplify.rs  test.rs  tterms.rs  typ.rs  val.rs  zip.rs  zipper.rs
src/unsat_core/: entry_points.rs  mod.rs  sample_graph.rs
src/val/: mod.rs
src/var/: mod.rs  vals.rs
src/var_to/: mod.rs  terms.rs  vals.rs
tests/: tests.rs
tests/error/: a-init_reals_err.smt2  div_zero.smt2
tests/sat/: a-init_reals.smt2  arrays_1.smt2  cfg_red.smt2  file.smt2
tests/unsat/: a-init_reals.smt2  arrays_1.smt2  core_1.smt2  core_2.smt2  core_3.smt2  core_4.smt2  let_bindings.smt2  mc_91.smt2
(+15 files in other folders)
