[package]
name = "hoice"
version = "1.0.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

readme = "README.md"
categories = ["science"]
keywords = ["machine learning", "verification", "proof"]
license = "MIT"

[[bin]]
name = "hoice"
path = "src/bin/main.rs"
doc = false

[lib]
name = "hoice"
path = "src/hoice.rs"

[features]
bench = [ ]

[dependencies]
lazy_static = "*"
clap = "*"
regex = "*"
hashconsing = "*"
error-chain = "*"
log = "0.3.9"
env_logger = "*"
ansi_term = "*"
rsmt2 = "*"
num = "*"
mylib = { git = "https://github.com/AdrienChampion/mylib" }
rayon = "*"
either = "*"
rand = "*"
isatty = "*"