[package]
name = "hoice"
version = "1.10.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
description = "A ICE-based Horn clause solver."
homepage = "https://github.com/hopv/hoice"
repository = "https://github.com/hopv/hoice"
readme = "README.md"
categories = ["science"]
keywords = ["machine learning", "verification", "proof"]
license = "MIT"
edition = "2021"

[[bin]]
name = "hoice"
path = "src/bin/main.rs"
doc = false

[lib]
name = "hoice"
path = "src/hoice.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'

[features]
bench = [ ]

[dependencies]
libc = "^0.2"
lazy_static = "^1.4"
clap = { version = "^3.1", features = ["cargo"] }
hashconsing = "^1.5"
error-chain = "^0.12"
ansi_term = "^0.12"
rsmt2 = "^0.16"
num = "^0.4"
mylib = { git = "https://github.com/AdrienChampion/mylib" }
either = "^1.8"
rand = "^0.8"
rand_xorshift = "^0.3"
atty = "^0.2"